--- a/client/content/content.html
+++ b/client/content/content.html
@@ -1,5 +1,5 @@
 <head>
-    <link href='https://fonts.googleapis.com/css?family=Karma:400,500,600,700,300' rel='stylesheet' type='text/css'>
+    <!--<link href='https://fonts.googleapis.com/css?family=Karma:400,500,600,700,300,200,100' rel='stylesheet' type='text/css'>-->
     <title>SliNexus</title>
 </head>
 
