edits to the registration form layout

--- a/client/content/content.html
+++ b/client/content/content.html
@@ -1,6 +1,6 @@
 <head>
     <!--<link href='https://fonts.googleapis.com/css?family=Karma:400,500,600,700,300,200,100' rel='stylesheet' type='text/css'>-->
-    <title>SliNexus</title>
+    <title>Slinexus</title>
 </head>
 
 <template name='content'>
